convolution nn + changes in dataset preparation

--- a/Prepare_dataset.ipynb
+++ b/Prepare_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
-    "import cv\n",
+    "import cv2\n",
     "import os\n",
     "from PIL import ImageFont, ImageDraw, Image\n",
     "import shutil"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -33,20 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "input_dir = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs2\\\\simple_set_good\\\\'\n",
-    "output_dir = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs2\\\\simple_set_middle\\\\'\n",
-    "cropped_dir = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs2\\\\simple_set_fonts\\\\'\n",
+    "input_dir = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs1_4\\\\simple_set_good\\\\'\n",
+    "output_dir = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs1_4\\\\simple_set_middle\\\\'\n",
+    "cropped_dir = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs1_4\\\\simple_set_fonts\\\\'\n",
     "\n",
     "font_names = []\n",
-    "font_files = [u'simhei.ttf', u'simsun.ttc', u'msjhbd.ttc', u'msjhl.ttc', u'msjh.ttc',\n",
-    "             u'msjhbd.ttc', u'msjhl.ttc', u'msjh.ttc', u'msyhbd.ttc', u'msyhl.ttc', u'msyh.ttc', u'msyhbd.ttc', u'msyhl.ttc',\n",
-    "             u'msyh.ttc', u'mingliu.ttc', u'mingliu.ttc', u'simfang.ttf']\n",
+    "font_files = [u'simhei.ttf', u'simsun.ttc', u'msjhbd.ttc', u'msjhl.ttc', u'msjh.ttc', u'msjhbd.ttc', u'msjhl.ttc', u'msjh.ttc', u'msyhbd.ttc', u'msyhl.ttc', u'msyh.ttc', u'msyhbd.ttc', u'msyhl.ttc', u'msyh.ttc', u'mingliu.ttc', u'mingliu.ttc', u'simfang.ttf']\n",
     "for font_file in font_files:\n",
     "    font_names.append(font_file[:font_file.find('.')])\n",
     "\n",
@@ -59,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -125,21 +123,21 @@
     "white_pixel = 255\n",
     "\n",
     "def has_row_black(image, row):\n",
-    "    width = image.size[0]\n",
+    "    height, width = image.shape[:2]\n",
     "    for x in range(0, width):\n",
-    "        if image.getpixel((x, row)) != white_pixel:\n",
+    "        if image[row, x] != white_pixel:\n",
     "            return True\n",
     "    return False    \n",
     "    \n",
     "def has_col_black(image, col):\n",
-    "    height = image.size[1]\n",
+    "    height, width = image.shape[:2]\n",
     "    for y in range(0, height):\n",
-    "        if image.getpixel((col, y)) != white_pixel:\n",
+    "        if image[y, col] != white_pixel:\n",
     "            return True\n",
     "    return False\n",
     "\n",
     "def crop_image(image):\n",
-    "    width, height = image.size\n",
+    "    height, width = image.shape[:2]\n",
     "    \n",
     "    left = 0\n",
     "    upper = 0\n",
@@ -166,25 +164,25 @@
     "            lower = y\n",
     "            break\n",
     "                \n",
-    "    return image.crop((left,upper,right + 1,lower + 1))"
+    "    return image[upper : lower + 1, left : right + 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "input_dir_2 = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs2\\\\simple_set_middle\\\\'\n",
-    "output_dir_2 = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs2\\\\simple_set_fonts\\\\'\n",
+    "input_dir_2 = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs1_4\\\\simple_set_middle\\\\'\n",
+    "output_dir_2 = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs1_4\\\\simple_set_fonts_inter_area\\\\'\n",
     "default_size = 23"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -195,10 +193,19 @@
     "    iteration = 0\n",
     "\n",
     "    for filename in os.listdir(input_dir):\n",
+    "        \n",
+    "        #PIL Image\n",
     "        image = Image.open(input_dir + filename)\n",
+    "        \n",
+    "        #OpenCV image ~ numpy.ndarray\n",
+    "        image = np.array(image)\n",
+    "        \n",
     "        cropped_image = crop_image(image)\n",
-    "        image_background = Image.new(image_mode, (default_size, default_size), color=255)\n",
-    "        width, height = cropped_image.size\n",
+    "        \n",
+    "        image_background = np.zeros((default_size,default_size), np.uint8)\n",
+    "        image_background[:] = (255)\n",
+    "        \n",
+    "        height, width = cropped_image.shape[:2]\n",
     "        new_width = default_size\n",
     "        new_height = default_size\n",
     "\n",
@@ -211,15 +218,19 @@
     "        else:\n",
     "            new_width = int(round(float(width) / height * default_size))\n",
     "            left = int((default_size - new_width) / 2.0)\n",
-    "\n",
-    "        resized_image = cropped_image.resize((new_width, new_height))\n",
-    "        image_background.paste(resized_image, (left, upper))        \n",
-    "        image_background.save(output_dir + filename, 'BMP')"
+    "        \n",
+    "        resized_image = cv2.resize(cropped_image, (new_width, new_height), interpolation = cv2.INTER_AREA)\n",
+    "        \n",
+    "        image_background[upper : upper + new_height, left : left + new_width] = resized_image\n",
+    "        \n",
+    "        pil_image_background = Image.fromarray(image_background)\n",
+    "        \n",
+    "        pil_image_background.save(output_dir + filename, 'BMP')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -240,35 +251,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import random\n",
-    "gauss_dir = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs2\\\\simple_set_fonts_gauss\\\\'"
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-32-88a46c81236f>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-88a46c81236f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def gauss_images(input_dir, output_dir):\n",
-    "    for filename in os.listdir(input_dir):"
+    "def add_gauss_noise(image, std):\n",
+    "    width, height = image.size\n",
+    "    for i in range(0, width):\n",
+    "        for j in range(0, height):\n",
+    "            random_addition = random.gauss(0, std)\n",
+    "            image.putpixel((i, j), (int(min(255, max(0, image.getpixel((i,j)) + random_addition)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def gauss_images(input_dir, output_dir, std, x_product):\n",
+    "    for filename in os.listdir(input_dir):\n",
+    "        for index in range(x_product):\n",
+    "            image = Image.open(input_dir + filename)\n",
+    "            add_gauss_noise(image, std)\n",
+    "            image.save(output_dir + filename[:filename.find('.')] + str(index) + '.bmp', 'BMP')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "input_dir_gauss = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs2\\\\simple_set_fonts\\\\'\n",
+    "output_dir_gauss = u'C:\\\\Users\\\\Mikhail\\\\Diploma\\\\Hieroglyphs2\\\\simple_set_fonts_gauss_'\n",
+    "\n",
+    "stds = [1,2,3,4,5]\n",
+    "x_products = [20,20,20,20,20]\n",
+    "\n",
+    "for std_index in range(len(stds)):\n",
+    "    for index in range(len(font_names)):\n",
+    "        output_dir_gauss_spec = output_dir_gauss + str(stds[std_index]) + '\\\\'\n",
+    "        if not os.path.exists(output_dir_gauss_spec + font_names[index]):\n",
+    "            prepare_dir(output_dir_gauss_spec, font_names[index])\n",
+    "            gauss_images(input_dir_gauss + font_names[index] + '\\\\', output_dir_gauss_spec + font_names[index] + '\\\\', stds[std_index], x_products[std_index])"
    ]
   },
   {
